--- a/eii/docker-compose.yml
+++ b/eii/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       test: ["CMD-SHELL", "exit", "0"]
       interval: 5m
     ipc: "none"
+    ports:
+      - '65114:65114'
     environment:
       AppName: "DLStreamerPipelineServer"
       DEV_MODE: ${DEV_MODE}
